Remove CONFIG_CRYPTO_DEV_KFIPS.
Change-Id: I6942cc74321294f2c6665eb8785b88f76bc9a725

--- a/arch/arm/configs/g2-vzw-perf_defconfig
+++ b/arch/arm/configs/g2-vzw-perf_defconfig
@@ -644,7 +644,7 @@ CONFIG_CRYPTO_DEV_QCRYPTO=m
 CONFIG_CRYPTO_DEV_QCE=y
 CONFIG_CRYPTO_DEV_QCEDEV=y
 #APPLY FIPS MODULE
-CONFIG_CRYPTO_DEV_KFIPS=y
+# CONFIG_CRYPTO_DEV_KFIPS=y
 
 # For SELinux jaejyn.shin@lge.com
 CONFIG_SECURITY=y
