--- a/arch/arm/configs/g2-vzw-perf_defconfig
+++ b/arch/arm/configs/g2-vzw-perf_defconfig
@@ -668,7 +668,7 @@ CONFIG_CRYPTO_DEV_QCE=y
 CONFIG_CRYPTO_DEV_QCEDEV=y
 CONFIG_PFT=y
 #APPLY FIPS MODULE
-CONFIG_CRYPTO_DEV_KFIPS=y
+# CONFIG_CRYPTO_DEV_KFIPS is not set
 
 # For SELinux jaejyn.shin@lge.com
 CONFIG_SECURITY=y
