--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -1493,7 +1493,9 @@ config KSAPI
 endmenu
 
 source "arch/arm/common/Kconfig"
-source "arch/arm/hotplug/Kconfig
+
+source "arch/arm/hotplug/Kconfig"
+
 
 menu "Bus support"
 
