Added USB fast charge files & patches.

--- a/arch/arm/configs/g2-vzw-perf_defconfig
+++ b/arch/arm/configs/g2-vzw-perf_defconfig
@@ -692,3 +692,6 @@ CONFIG_LG_VPN_V33=y
 
 CONFIG_LGE_LIMIT_FREQ_TABLE=y
 CONFIG_LGE_GDSC_SWCONTROL=y
+
+# Enable Fast Charge
+CONFIG_FORCE_FAST_CHARGE=Y
