--- a/arch/arm/configs/msm8974_defconfig
+++ b/arch/arm/configs/msm8974_defconfig
@@ -570,3 +570,6 @@ CONFIG_BUILD_ARM_APPENDED_DTB_IMAGE=y
 CONFIG_MSM_RDBG=m
 CONFIG_MSM_AVTIMER=y
 CONFIG_NETFILTER_XT_TARGET_IDLETIMER=y
+
+# Enable Fast Charge
+CONFIG_FORCE_FAST_CHARGE=y
