--- a/arch/arm/configs/g2-vzw-perf_defconfig
+++ b/arch/arm/configs/g2-vzw-perf_defconfig
@@ -695,3 +695,9 @@ CONFIG_LGE_GDSC_SWCONTROL=y
 
 # Enable Fast Charge
 CONFIG_FORCE_FAST_CHARGE=Y
+
++#### Bricked Thermal ####
+CONFIG_BRICKED_THERMAL=y
+CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
+CONFIG_MSM_CPU_FREQ_MAX=2265600
+CONFIG_MSM_CPU_FREQ_MIN=300000
