--- a/arch/arm/configs/vs980_defconfig
+++ b/arch/arm/configs/vs980_defconfig
@@ -1,4 +1,5 @@
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
+CONFIG_CROSS_COMPILE="arm-linux-eabi-SM-4.8"
 CONFIG_EXPERIMENTAL=y
 CONFIG_LOCALVERSION="-perf"
 CONFIG_KERNEL_LZMA=y
@@ -119,6 +120,7 @@ CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_ONDEMANDX=y
 CONFIG_CPU_BOOST=y
 CONFIG_CPU_IDLE=y
 CONFIG_VFP=y
@@ -695,6 +697,7 @@ CONFIG_LGE_GDSC_SWCONTROL=y
 
 # Enable Fast Charge
 CONFIG_FORCE_FAST_CHARGE=y
+CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMANDX=y
 
 +#### Bricked Thermal ####
 CONFIG_BRICKED_THERMAL=y
