Updated vs980_defconfig to custom-kernel defaults

--- a/arch/arm/configs/vs980_defconfig
+++ b/arch/arm/configs/vs980_defconfig
@@ -36,8 +36,8 @@ CONFIG_MODULE_FORCE_UNLOAD=y
 CONFIG_MODVERSIONS=y
 CONFIG_PARTITION_ADVANCED=y
 CONFIG_EFI_PARTITION=y
-CONFIG_IOSCHED_TEST=y
-CONFIG_DEFAULT_ROW=y
+CONFIG_IOSCHED_TEST=n
+# CONFIG_DEFAULT_ROW=y
 CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8974=y
 CONFIG_MSM_KRAIT_TBB_ABORT_HANDLER=y
@@ -697,9 +697,16 @@ CONFIG_LGE_GDSC_SWCONTROL=y
 
 # Enable Fast Charge
 CONFIG_FORCE_FAST_CHARGE=y
+
+# Enable OnDemandX
 CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMANDX=y
 
-+#### Bricked Thermal ####
+# Enable SIO
+CONFIG_DEFAULT_SIO=y
+CONFIG_DEFAULT_IOSCHED="sio"
+
+
+#### Bricked Thermal ####
 CONFIG_BRICKED_THERMAL=y
 CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
 CONFIG_MSM_CPU_FREQ_MAX=2265600
