Rolled back ondemandx

--- a/arch/arm/configs/vs980_defconfig
+++ b/arch/arm/configs/vs980_defconfig
@@ -120,7 +120,7 @@ CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_CPU_FREQ_GOV_ONDEMANDX=y
+# CONFIG_CPU_FREQ_GOV_ONDEMANDX=y
 CONFIG_CPU_BOOST=y
 CONFIG_CPU_IDLE=y
 CONFIG_VFP=y
@@ -699,7 +699,7 @@ CONFIG_LGE_GDSC_SWCONTROL=y
 CONFIG_FORCE_FAST_CHARGE=y
 
 # Enable OnDemandX
-CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMANDX=y
+CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
 
 # Enable SIO
 CONFIG_DEFAULT_SIO=y
