--- a/arch/arm/configs/vs980_defconfig
+++ b/arch/arm/configs/vs980_defconfig
@@ -120,7 +120,7 @@ CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-# CONFIG_CPU_FREQ_GOV_ONDEMANDX=y
+CONFIG_CPU_FREQ_GOV_INTELLI_PLUG=y
 CONFIG_CPU_BOOST=y
 CONFIG_CPU_IDLE=y
 CONFIG_VFP=y
@@ -564,7 +564,7 @@ CONFIG_USB_STORAGE_ENE_UB6250=y
 CONFIG_USB_EHSET_TEST_FIXTURE=y
 CONFIG_USB_GADGET=y
 CONFIG_USB_GADGET_DEBUG_FILES=y
-CONFIG_USB_DWC3_MSM=y
+CONFIG_USB_DWC3_MSM=n
 CONFIG_USB_G_ANDROID=y
 CONFIG_USB_G_LGE_ANDROID=y
 CONFIG_USB_G_LGE_ANDROID_PFSC=y
@@ -697,9 +697,10 @@ CONFIG_LGE_GDSC_SWCONTROL=y
 
 # Enable Fast Charge
 CONFIG_FORCE_FAST_CHARGE=y
+CONFIG_POWER_SUPPLY=y
 
-# Enable OnDemandX
-CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
+# Enable Intelli_Plug as default
+CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLI_PLUG=y
 
 # Enable SIO
 CONFIG_DEFAULT_SIO=y
@@ -711,3 +712,4 @@ CONFIG_BRICKED_THERMAL=y
 CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
 CONFIG_MSM_CPU_FREQ_MAX=2265600
 CONFIG_MSM_CPU_FREQ_MIN=300000
+
